version 0.8.0 - currently working on
- [#211] Change: Dates prior to 1970 can now be saved properly (depends on TYPO3 4.2 now!)
- [#2801] Email address in the list view is not secured against spam
- [#2382] Fix: PHP error when loading oelib template helper due to camel-case filename
- [#2802] Change: Added a comma in list template between surname and first name (looks better)
- [#2523] Change: Make use of the oelib AutoLoader consistent
- [#2719] Feature: Additional fields for nickname and mobile phone number
- [#2780] Change: In grouped list view title is linked to detail view too
- [#2567] Fix: SQL errors in the box view when having no persons selected
- [#2476] Change: Updated the documentation to the new template
- [#2761] Fix: Person's title is not shown correctly in the list view
- [#2762] Change: Extension is now usable as global extension
- [#2756] Change: Allow location records on regular pages
- [#2640] Fix: Hidden subparts caused some missing fields in the list view.
- [#2511] Cleaned up the copy/pasted stuff from oelib/seminars
- [#2513] Updated copyright lines to new mail address
- [#2510] Updated copyright lines to 2009
- [#1843, #2544] Refactoring: Added new detailView class
- [#2509] Change: Changed extension key to "bzdstaffdirectory"
- [#1923] Feature: Add stdWrap properties to the "tasks" field
- [#2445] Fix: Replaced all calls to deprecated methods from oelib - now compatible with oelib >=0.5.0

version 0.7.0 - released 2008-11-24
- [#2349] Change: Enabled setting of labels for whole template (thanks to Olaf Schumann)
- [#2351] Fix: Recursive flag not taken into account when "Ignore group selection" active (Thanks to Olaf Schumann)
- [#90] Feature: Use oelib for templating stuff
- [#2270] Fix: Compatibility with TYPO3 4.3
- [#244] Feature: Add locations as relations
- [#2038] Fix: Changed links to detail view to contain cHash
- [#1746] Fix: Removed localized team/person names from the corresponding selectors in the BE form